--- a/WebGL_game.html
+++ b/WebGL_game.html
@@ -262,10 +262,18 @@ attribute vec3 vPosition;
 				style="text-align: center" id="points"> Points:
 		</p>
 		<canvas id="game_window" style="border: none; alignment: center; margin-top: 2px "></canvas>
-		<div id="game_over" style=" position: absolute; top: 20%; font-size: 1500%; visibility: hidden; color: red">
-			<span id="game_over_span" style="align-content: center;">
-				GAME OVER
+		<div id="game_over" style=" position: absolute; top: 1%; visibility: hidden; color: red">
+			<span id="game_over_span" style="align-content: center; font-size: 1500%">
 			</span>
+			</br>
+			<span id="help" style="align-content: center; font-size: 800%">
+				PRESS SPACE TO RESTART
+			</span>
+			</br>
+			<span id="help_need" style="align-content: center; font-size: 800%">
+				CLICK H FOR HELP
+			</span>
+
 		</div>
 				
 	</div>
