--- a/WebGL_game.html
+++ b/WebGL_game.html
@@ -14,7 +14,7 @@ J. Madeira - November 2015
 
 -->
 	
-<title>WebGL example 29 &mdash; Textures and Blending</title>
+<title>DODGE THE BLOCK</title>
 
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
